[tool.poetry]
name = "pycounts_tanmayag97"
version = "0.1.0"
description = "A package for calculating word count"
authors = ["Tanmay Agarwal"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
